fixes average and annual not in alignment
Thought the orginal method of histograms was not working, the averages displayed were not coorect and had replaced it with avg's I cacluated via JS code. there was actually an error with index incrementing that caused the values in the histogram to be misssing a value, that is fixed and it fixed the historgram and alignment issues

--- a/src/css/Sandbox.scss
+++ b/src/css/Sandbox.scss
@@ -37,3 +37,7 @@ html, body {
   height: 95px;
   max-height: 95px;
 }
+
+.sandbox-hover {
+  padding: 6px !important;
+}
